Adjust protocol according to selected jchannel